--- a/app/src/main/res/drawable/border_corner_drawable.xml
+++ b/app/src/main/res/drawable/border_corner_drawable.xml
@@ -4,6 +4,5 @@
         android:width="1dip"
         android:color="#E6E6E6" />
     <corners
-        android:bottomRightRadius="@dimen/_20sdp"
-        android:topRightRadius="@dimen/_20sdp" />
+        android:radius="@dimen/_20sdp" />
 </shape>
