--- a/app/src/main/res/drawable/border_corner_left_drawable.xml
+++ b/app/src/main/res/drawable/border_corner_left_drawable.xml
@@ -1,4 +1,7 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <stroke android:width="1dip" android:color="#E6E6E6"/>
-    <corners android:topLeftRadius="@dimen/_20sdp" android:bottomLeftRadius="@dimen/_20sdp"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <stroke
+        android:width="1dip"
+        android:color="#E6E6E6" />
+    <corners android:radius="@dimen/_20sdp" />
 </shape>
