--- a/app/src/main/res/drawable/two_sided_rounded_vorner_left.xml
+++ b/app/src/main/res/drawable/two_sided_rounded_vorner_left.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <corners android:topLeftRadius="@dimen/_20sdp" android:bottomLeftRadius="@dimen/_20sdp"/>
-    <padding android:left="8dp" android:right="8dp" android:top="8dp" android:bottom="8dp"/>
-    <stroke android:width="1dip" android:color="#E6E6E6" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners
+        android:bottomLeftRadius="@dimen/_20sdp"
+        android:topLeftRadius="@dimen/_20sdp" />
+    <padding
+        android:bottom="8dp"
+        android:left="8dp"
+        android:right="8dp"
+        android:top="8dp" />
+    <stroke
+        android:width="1dip"
+        android:color="#E6E6E6" />
 </shape>
