--- a/app/src/main/res/layout/row_prompt_profile_right.xml
+++ b/app/src/main/res/layout/row_prompt_profile_right.xml
@@ -6,29 +6,25 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
-        android:layout_marginTop="@dimen/_20sdp"
         android:layout_marginStart="@dimen/_20sdp"
-        android:layout_marginEnd="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_20sdp"
         android:background="@drawable/two_sided_rounded_vorner_left"
         android:orientation="vertical"
-        android:paddingStart="@dimen/_20sdp"
-        android:paddingTop="@dimen/_20sdp"
-        android:paddingEnd="@dimen/_10sdp"
-        android:paddingBottom="@dimen/_10sdp"
+        android:padding="@dimen/_20sdp"
         android:visibility="visible">
 
         <TextView
             android:id="@+id/text_prompt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:fontFamily="@font/darkergrotesque_medium"
+            android:layout_gravity="end"
+            android:fontFamily="@font/ptsans_regular"
             android:text="in a partner, I'm looking for..."
             android:textColor="@color/textSubTitle"
-            android:textSize="@dimen/_16ssp" />
+            android:textSize="@dimen/_14ssp" />
 
         <TextView
             android:id="@+id/text_answer"
@@ -45,8 +41,7 @@
     <View
         android:layout_width="1dip"
         android:layout_height="@dimen/_20sdp"
-        android:layout_gravity="end"
-        android:layout_marginEnd="@dimen/_50sdp"
+        android:layout_gravity="center"
         android:background="#E6E6E6" />
 
     <LinearLayout
@@ -54,6 +49,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_20sdp"
         android:layout_marginEnd="@dimen/_20sdp"
+        android:paddingTop="@dimen/_20sdp"
+        android:paddingBottom="@dimen/_20sdp"
         android:background="@drawable/border_corner_left_drawable">
 
         <TextView
@@ -63,12 +60,12 @@
             android:layout_gravity="center"
             android:layout_marginStart="@dimen/_20sdp"
             android:layout_weight="1"
-            android:fontFamily="@font/darkergrotesque_medium"
+            android:fontFamily="@font/ptsans_regular"
             android:paddingTop="@dimen/_10sdp"
             android:paddingBottom="@dimen/_10sdp"
             android:text="There's power in looking silly and not caring that you do."
             android:textColor="@color/textSubTitle"
-            android:textSize="@dimen/_16ssp" />
+            android:textSize="@dimen/_14ssp" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/image_view"
