--- a/app/src/main/res/drawable/border_corner_left_drawable.xml
+++ b/app/src/main/res/drawable/border_corner_left_drawable.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <stroke
+    <solid
         android:width="1dip"
-        android:color="#E6E6E6" />
+        android:color="#F8F8F8" />
     <corners android:radius="@dimen/_20sdp" />
 </shape>
