--- a/app/src/main/res/drawable/chat_sender_drawable.xml
+++ b/app/src/main/res/drawable/chat_sender_drawable.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <corners android:radius="@dimen/_20sdp"/>
     <padding android:left="8dp" android:right="8dp" android:top="8dp" android:bottom="8dp"/>
-    <solid android:width="1dip" android:color="#E6E6E6" />
+    <solid android:width="1dip" android:color="#F8F8F8" />
 </shape>
