--- a/app/src/main/res/layout/row_prompt_profile_right.xml
+++ b/app/src/main/res/layout/row_prompt_profile_right.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginTop="@dimen/_20sdp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
         android:layout_marginStart="@dimen/_20sdp"
-        android:layout_marginTop="@dimen/_20sdp"
         android:background="@drawable/two_sided_rounded_vorner_left"
         android:orientation="vertical"
         android:padding="@dimen/_20sdp"
@@ -39,10 +39,10 @@
     </LinearLayout>
 
     <View
-        android:layout_width="1dip"
+        android:layout_width="@dimen/_5sdp"
         android:layout_height="@dimen/_20sdp"
         android:layout_gravity="center"
-        android:background="#E6E6E6" />
+        android:background="#F8F8F8" />
 
     <LinearLayout
         android:layout_width="match_parent"
