--- a/app/src/main/res/layout/row_prompt_profile__left.xml
+++ b/app/src/main/res/layout/row_prompt_profile__left.xml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_marginTop="@dimen/_20sdp">
+    android:layout_marginTop="@dimen/_20sdp"
+    android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/fab_edit_profile_photo"
+        android:layout_width="@dimen/_30sdp"
+        android:layout_height="@dimen/_30sdp"
+        android:background="@drawable/rounded_button_solid"
+        android:src="@drawable/ic_delete"
+        android:tint="@color/white"
+        android:layout_alignEnd="@id/layout_prompt_answer"
+        android:elevation="1dp"
+        android:layout_marginEnd="@dimen/_20sdp"
+        android:foreground="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"/>
 
     <LinearLayout
+        android:id="@+id/layout_prompt_answer"
+        android:layout_marginTop="@dimen/_15sdp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/_20sdp"
@@ -20,8 +35,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:paddingEnd="@dimen/_20sdp"
             android:fontFamily="@font/ptsans_regular"
+            android:paddingEnd="@dimen/_20sdp"
             android:text="the most adventurous thing I did was..."
             android:textColor="@color/textSubTitle"
             android:textSize="@dimen/_14ssp" />
@@ -39,19 +54,23 @@
     </LinearLayout>
 
     <View
+        android:id="@+id/view_divider"
         android:layout_width="@dimen/_5sdp"
         android:layout_height="@dimen/_20sdp"
-        android:layout_gravity="center"
+        android:layout_below="@id/layout_prompt_answer"
+        android:layout_centerInParent="true"
         android:background="#F8F8F8" />
 
     <LinearLayout
+        android:id="@id/layout_prompt_picture"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/view_divider"
         android:layout_marginStart="@dimen/_20sdp"
         android:layout_marginEnd="@dimen/_20sdp"
+        android:background="@drawable/border_corner_drawable"
         android:paddingTop="@dimen/_20sdp"
-        android:paddingBottom="@dimen/_20sdp"
-        android:background="@drawable/border_corner_drawable">
+        android:paddingBottom="@dimen/_20sdp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/image_view"
@@ -80,4 +99,4 @@
             android:textSize="@dimen/_14ssp" />
 
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
