--- a/app/src/main/res/layout/row_prompt_profile_right.xml
+++ b/app/src/main/res/layout/row_prompt_profile_right.xml
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_marginTop="@dimen/_20sdp">
 
+    <ImageView
+        android:id="@+id/fab_edit_profile_photo"
+        android:layout_width="@dimen/_30sdp"
+        android:layout_height="@dimen/_30sdp"
+        android:background="@drawable/rounded_button_solid"
+        android:src="@drawable/ic_delete"
+        android:tint="@color/white"
+        android:layout_alignStart="@id/layout_prompt_answer"
+        android:elevation="1dp"
+        android:layout_marginStart="@dimen/_20sdp"
+        android:foreground="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"/>
+
     <LinearLayout
+        android:id="@+id/layout_prompt_answer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_15sdp"
         android:layout_gravity="end"
         android:layout_marginStart="@dimen/_20sdp"
         android:background="@drawable/two_sided_rounded_vorner_left"
@@ -39,14 +55,18 @@
     </LinearLayout>
 
     <View
+        android:id="@+id/view_divider"
         android:layout_width="@dimen/_5sdp"
         android:layout_height="@dimen/_20sdp"
-        android:layout_gravity="center"
+        android:layout_below="@id/layout_prompt_answer"
+        android:layout_centerInParent="true"
         android:background="#F8F8F8" />
 
     <LinearLayout
+        android:id="@id/layout_prompt_picture"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/view_divider"
         android:layout_marginStart="@dimen/_20sdp"
         android:layout_marginEnd="@dimen/_20sdp"
         android:paddingTop="@dimen/_20sdp"
@@ -80,4 +100,4 @@
             android:src="@drawable/person" />
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
