--- a/app/src/main/res/layout/row_prompt_profile__left.xml
+++ b/app/src/main/res/layout/row_prompt_profile__left.xml
@@ -2,11 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/_20sdp"
+    android:layout_marginTop="@dimen/_15sdp"
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/fab_edit_profile_photo"
+        android:id="@+id/button_delete"
         android:layout_width="@dimen/_30sdp"
         android:layout_height="@dimen/_30sdp"
         android:background="@drawable/rounded_button_solid"
