--- a/app/src/main/res/layout/row_prompt_profile_right.xml
+++ b/app/src/main/res/layout/row_prompt_profile_right.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_marginTop="@dimen/_20sdp">
+    android:layout_marginTop="@dimen/_15sdp">
 
     <ImageView
-        android:id="@+id/fab_edit_profile_photo"
+        android:id="@+id/button_delete"
         android:layout_width="@dimen/_30sdp"
         android:layout_height="@dimen/_30sdp"
         android:background="@drawable/rounded_button_solid"
