feat: change layout of dialog sharing disclaimer of unable to change availability

--- a/app/src/main/res/layout/availabillity_cannot_change_dialog.xml
+++ b/app/src/main/res/layout/availabillity_cannot_change_dialog.xml
@@ -4,45 +4,29 @@
     android:id="@+id/custom_dialog_layout_design_user_input"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
-    android:orientation="vertical"
-    android:padding="16dp">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:layout_width="@dimen/_25sdp"
-            android:layout_height="@dimen/_25sdp"
-            android:layout_gravity="center"
-            android:layout_marginEnd="@dimen/_10sdp"
-            android:src="@drawable/ic_alert" />
-
-        <TextView
-            android:id="@+id/dialogTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="@font/sf_pro_rounded_medium"
-            android:text="Cannot Change Schedule"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_20ssp"
-            android:textStyle="bold" />
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_1sdp"
-        android:background="@color/black" />
+    android:layout_marginStart="@dimen/_20sdp"
+    android:layout_marginEnd="@dimen/_20sdp"
+    android:paddingStart="@dimen/_20sdp"
+    android:paddingEnd="@dimen/_20sdp"
+    android:paddingTop="@dimen/_20sdp"
+    android:orientation="vertical">
 
     <TextView
-        android:id="@+id/userInputDialog"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_10sdp"
-        android:fontFamily="@font/sf_pro_rounded_regular"
-        android:justificationMode="inter_word"
+        android:fontFamily="@font/ptsans_bold"
+        android:text="Can't Change Schedule"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_20ssp"
+        android:drawableStart="@drawable/ic_alert"
+        android:drawablePadding="@dimen/_5sdp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_15sdp"
+        android:fontFamily="@font/ptsans_regular"
         android:text="@string/cannot_change_schedule_disclaimer"
         android:textColor="@color/black"
         android:textSize="@dimen/_16ssp" />
