--- a/app/src/main/res/layout/activity_availability_settings.xml
+++ b/app/src/main/res/layout/activity_availability_settings.xml
@@ -213,7 +213,7 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/button_add_prompt"
+                    android:id="@+id/button_add_availability"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/_20sdp"
