feat: add confirmation dialog for selected slots from user in availability settings

--- a/app/src/main/res/layout/availability_saved_dialog.xml
+++ b/app/src/main/res/layout/availability_saved_dialog.xml
@@ -6,49 +6,37 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@color/white"
-    android:padding="16dp">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:layout_width="@dimen/_25sdp"
-            android:layout_height="@dimen/_25sdp"
-            android:src="@drawable/ic_schedule"
-            android:layout_gravity="center"
-            android:layout_marginEnd="@dimen/_10sdp"/>
-        <TextView
-            android:id="@+id/dialogTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Your Schedule This Week"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_20ssp"
-            android:fontFamily="@font/sf_pro_rounded_medium"
-            android:layout_gravity="center"
-            android:textStyle="bold" />
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_1sdp"
-        android:background="@color/black" />
+    android:paddingStart="@dimen/_20sdp"
+    android:paddingEnd="@dimen/_20sdp"
+    android:paddingTop="@dimen/_20sdp">
 
     <TextView
-        android:id="@+id/userInputDialog"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:justificationMode="inter_word"
         android:layout_marginTop="@dimen/_10sdp"
+        android:fontFamily="@font/ptsans_bold"
+        android:text="Save Your Availability"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_20ssp"
+        android:drawableStart="@drawable/ic_schedule"
+        android:drawablePadding="@dimen/_5sdp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:layout_marginBottom="@dimen/_10sdp"
+        android:fontFamily="@font/darkergrotesque_regular"
         android:text="@string/availability_saved_disclaimer"
         android:textColor="@color/black"
-        android:textSize="@dimen/_16ssp"
-        android:fontFamily="@font/sf_pro_rounded_regular" />
+        android:textSize="@dimen/_16ssp" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview_prompt_section"
+        android:id="@+id/recyclerview_availability_selected"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_10sdp"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:padding="@dimen/_20sdp"
+        android:background="@drawable/border_corner_drawable"/>
 </LinearLayout>
