--- a/app/src/main/res/layout/row_available_time_slots.xml
+++ b/app/src/main/res/layout/row_available_time_slots.xml
@@ -2,24 +2,21 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/white">
+    android:layout_height="wrap_content">
     <TextView
         android:id="@+id/day_text"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:fontFamily="@font/sf_pro_rounded_regular"
+        android:fontFamily="@font/ptsans_bold"
         android:textSize="@dimen/_16ssp"
         android:textColor="@color/black"
         android:textAllCaps="true"
-        android:textStyle="bold"/>
+        android:layout_marginEnd="@dimen/_5sdp"/>
     <TextView
         android:id="@+id/time_text"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:fontFamily="@font/sf_pro_rounded_regular"
+        android:fontFamily="@font/ptsans_regular"
         android:textSize="@dimen/_16ssp"
         android:textColor="@color/black"/>
 </LinearLayout>
